2009-11-08  Oliver Hader  <oliver@typo3.org>

	* Raised feeditadvanced from 0.1.1 to 0.8.0

2009-11-08  Sebastian Kurfuerst  <sebastian@typo3.org>

	* Raised Extbase and Fluid versions from 0.9.16 to 0.9.17

2009-11-07  Rupert Germann  <rupi@gmx.li>

	* Fixed bug #12436: Integrate checks concerning Suhosin/Hardened PHP in Install Tool (thanks to Oliver Hader)
	* Fixed bug #10792: Extensions cannot be looked up, when cache_extensions table is empty
	* Follow-up to bug #12499: re-added the removed function call and moved the deprecationLog call

2009-11-07  Benjamin Mack  <benni@typo3.org>

	* Fixed #12244: Improve locallangXMLOverride feature (Thanks to Steffen Gebert), this changes the LLoverride feature to $GLOBALS['TYPO3_CONF_VARS']['SYS']['locallangXMLOverride'] as an array

2009-11-07  Steffen Kamper  <info@sk-typo3.de>

	* Follow-up to #12483: Call to deprecated method t3lib_beUserAuth::trackBeUser()
	* Fixed bug #12013: tslib_pagegen fails to read mime type of the shortcut icon (thanks to Xavier Perseguers)
	* Fixed bug #12503: Help extensions shouldn't be shy

2009-11-07  Oliver Hader  <oliver@typo3.org>

	* Raised DBAL version from 0.9.24 to 0.9.25
	* Raised Extbase version from 0.9.12 to 0.9.13
	* Raised Extbase version from 0.9.13 to 0.9.16

2009-11-07  Bernhard Kraft  <bernhard@typo3.org>

	* Fixed bug #12428: slow t3lib_TSparser::parseSub

2009-11-06  Rupert Germann  <rupi@gmx.li>

	* Fixed bug #12499: Call to deprecated method t3lib_userAuth::redirect()

2009-11-06  Tobias Liebig <mail_typo3@etobi.de>

	* Fixed bug #9046: Nested domain linking

2009-11-06  Francois Suter  <francois@typo3.org>

	* Follow-up to #12215: Scheduler: Added GMT time difference to server time display for improved clarity

2009-11-06  Sebastian Kurfuerst  <sebastian@typo3.org>

	* Raising Extbase and Fluid versions to 0.9.12

2009-11-06  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #12481: AllowClipboard Helper Firefox extension does not work with FF 3.5