@@ -1,3 +1,7 @@
+2009-11-08  Steffen Kamper  <info@sk-typo3.de>
+
+	* Fixed bug #12247: absRefPrefix is prefixed with external js files
+
 2009-11-08  Oliver Hader  <oliver@typo3.org>
 
 	* Raised feeditadvanced from 0.1.1 to 0.8.0
